--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -13,6 +13,9 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+serde_json = "1.0.72"
 
 [build-dependencies]
 neon-build = "0.9"
