--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines" : { 
-    "node" : ">=8.x" 
+  "engines": {
+    "node": ">=8.x"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "neon-cli": "^0.1.20"
+    "neon-cli": "^0.1.20",
+    "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.12",
+    "typescript": "^4.5.2"
   }
 }
