--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -16,11 +16,12 @@ crate-type = ["cdylib"]
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.72"
+once_cell = "1.8.0"
 
 [build-dependencies]
 neon-build = "0.9"
 
 [dependencies.neon]
-version = "0.9.1"
+version = "0.10.0-alpha.3"
 default-features = false
-features = ["napi-6"]
+features = ["channel-api", "napi-6", "promise-api"]
