--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -3,7 +3,6 @@ name = "http_rust"
 version = "0.1.0"
 license = "ISC"
 edition = "2018"
-build = "build.rs"
 exclude = ["index.node"]
 
 [lib]
@@ -18,8 +17,8 @@ tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.72"
 once_cell = "1.8.0"
 
-[build-dependencies]
-neon-build = "0.9"
+# [build-dependencies]
+# neon-build = "0.9"
 
 [dependencies.neon]
 version = "0.10.0-alpha.3"
